--- a/css/main.css
+++ b/css/main.css
@@ -143,9 +143,13 @@ a {
 
 /* TODO 3 */
 .main-block {
+  max-width: 1200px; 
+  
   /* Restrict the maximum width of the .main-block to 1200px,
   then ensure that block is centered within the layout */
   /* Hint: how do you center a block element? */
+
+  /* margin: 0 auto;  */
 }
 
 .main-section {
@@ -213,14 +217,19 @@ a {
   .lessons-grid {
     display: grid;
     /* TODO 1 */
+    grid-template-columns: 1fr 1fr; 
+
     /* 2 column template! (1 fraction each) */
     /* Use this as a reminder of the syntax:
       https://codepen.io/roccop/pen/WLQJXY?editors=1100
     */
     /* TODO 5 */
+    grid-gap: 1em; 
     /* set a grid-gap of 1em 
     and make sure to remove the margin on each .lesson
     to get an evenly spaced layout. */
+    
+    margin: 0; 
   }
 
 }
@@ -247,6 +256,31 @@ a {
   .lessons-grid {
     /* TODO 2 */
     /* 4 column template! (1 fraction each) */
+    display: grid; 
+    grid-template-rows: 1fr 1fr 1fr 1fr; 
+  }
+  .main-block { 
+    display: grid; 
+    grid-template-columns: 1fr 1fr; 
+    grid-column-start: 1; 
+    grid-column-end: 2; 
+    margin: 0 auto; 
+  }
+
+  .main-header {  
+    grid-column-start: 1; 
+    grid-column-end: 4; 
+  }
+  .lessons {  
+    grid-column-start: 1; 
+    grid-column-end: 4; 
+  }
+  .grading {  
+    grid-column: 1; 
+    
+  }
+  .topics { 
+    grid-column: 2; 
   }
 
   /* TODO 4 */
